Fix some efficiency issues